--- a/src/app/components/global/hero/hero.component.html
+++ b/src/app/components/global/hero/hero.component.html
@@ -1,35 +1,33 @@
 <div class="hero">
-  <ng-container *ngFor="let hero of data; let i = index">
-    <div class="hero-slide" *ngIf="current === i" @fade>
-      <div class="backdrop">
+    <div class="backdrop">
         <div class="lazyloaded">
-          <img alt="{{hero?.title || hero?.name}}" class="lazyload image" src="https://image.tmdb.org/t/p/original/{{hero?.backdrop_path}}">
+            <img alt="{{data?.title || data?.name}}" class="lazyload image"
+                [src]="'https://image.tmdb.org/t/p/original/' + data?.backdrop_path" />
         </div>
-      </div>
-      <div class="pane">
-        <div>
-          <h1 class="name" [routerLink]="[hero.link]">
-            {{hero?.title || hero?.name}}
-          </h1>
-          <div class="meta">
-            <div class="rating">
-              <div class="stars">
-                <div [style.width.%]="(hero.vote_average / 10) * 100"></div>
-              </div>
-              <div *ngIf="hero.vote_count > 0">
-                {{ hero.vote_count | numberWithCommas }} Reviews
-              </div>
-            </div>
-            <div class="info">
-              <span *ngIf="hero.number_of_seasons">Season {{ hero.number_of_seasons }}</span>
-              <span *ngIf="hero?.release_date || hero?.first_air_date">{{ hero?.release_date || hero?.first_air_date | date }}</span>
-            </div>
-          </div>
-          <div class="desc">
-            {{ hero?.overview | truncate }}
-          </div>
-        </div>
-      </div>
     </div>
-  </ng-container>
+    <div class="pane">
+        <div>
+            <h1 class="name" [routerLink]="[data?.name]">
+                {{data?.title || data?.name}}
+            </h1>
+            <div class="meta">
+                <div class="rating">
+                    <div class="stars">
+                        <div [style.width.%]="(data?.vote_average / 10) * 100"></div>
+                    </div>
+                    <div *ngIf="data?.vote_count > 0">
+                        {{ data?.vote_count | numberWithCommas }} Reviews
+                    </div>
+                </div>
+                <div class="info">
+                    <span *ngIf="data?.number_of_seasons">Season {{ data?.number_of_seasons }}</span>
+                    <span *ngIf="data?.release_date || data?.first_air_date">{{ data?.release_date
+                        || data?.first_air_date | date }}</span>
+                </div>
+            </div>
+            <div class="desc">
+                {{ data?.overview | truncate }}
+            </div>
+        </div>
+    </div>
 </div>
