--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-hero [data]="movies_data"></app-hero>
+<app-slider [data]="movies_data"></app-slider>
 <app-carousel [title]="'Popular Movies'" [exploreLink]="'/movie'" 
     [items]="moviesSlider" [canNavigateLeft]="true" [canNavigateRight]="true">
 </app-carousel>
