--- a/src/app/components/tv/tv.component.html
+++ b/src/app/components/tv/tv.component.html
@@ -1,4 +1,4 @@
-<app-hero [data]="tv_data"></app-hero>
+<app-slider [data]="tv_data"></app-slider>
 
 <app-carousel [title]="'Popular TV Shows'" [exploreLink]="'/movie/category/popularTv'"
     [items]="tvCategories['popularTv']" [canNavigateLeft]="true" [canNavigateRight]="true">
