--- a/src/app/components/global/carousel/carousel.component.html
+++ b/src/app/components/global/carousel/carousel.component.html
@@ -6,7 +6,7 @@
     </a>
   </div>
   <div class="carousel">
-    <button aria-label="Previous" type="button" [attr.disabled]="!canNavigateLeftInternal ? true : null"
+    <button aria-label="Previous" type="button" [attr.disabled]="!canNavigateLeft ? true : null"
       (click)="prevSlide()" class="carousel__nav carousel__nav--left">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path fill="none" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
@@ -52,7 +52,7 @@
         </a>
       </div>
     </div>
-    <button aria-label="Next" type="button" [attr.disabled]="!canNavigateRightInternal ? true : null"
+    <button aria-label="Next" type="button" [attr.disabled]="!canNavigateRight ? true : null"
       (click)="nextSlide()" class="carousel__nav carousel__nav--right">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path fill="none" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
