--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <app-slider [data]="movies_data"></app-slider>
-<app-carousel [title]="'Popular Movies'" [exploreLink]="'/movie'" 
+<app-carousel [title]="'Popular Movies'" [exploreLink]="'/movie/category/now_playing'" 
     [items]="moviesSlider" [canNavigateLeft]="true" [canNavigateRight]="true">
 </app-carousel>
 
-<app-carousel [title]="'Popular TV Shows'" [exploreLink]="'/tv'" 
+<app-carousel [title]="'Popular TV Shows'" [exploreLink]="'/tv/category/airing_today'" 
     [items]="tvSlider" [canNavigateLeft]="true" [canNavigateRight]="true">
 </app-carousel>
