--- a/src/app/components/movies-info/movies-info.component.html
+++ b/src/app/components/movies-info/movies-info.component.html
@@ -17,7 +17,7 @@
 
 <div class="spacing">
     <div *ngIf="activeTab === 'overview'" id="overview">
-        <app-media [data]="movie_data" [externalData]="external_data" class="info"></app-media>
+        <app-media [data]="movie_data" [type]="type" [externalData]="external_data" class="info"></app-media>
     </div>
 
     <div *ngIf="activeTab === 'videos'">
