--- a/src/app/components/tv-info/tv-info.component.html
+++ b/src/app/components/tv-info/tv-info.component.html
@@ -21,7 +21,7 @@
 
 <div class="spacing">
     <div *ngIf="activeTab === 'overview'" id="overview">
-        <app-media [data]="tv_data" [externalData]="external_data" class="info"></app-media>
+        <app-media [data]="tv_data" [type]="type" [externalData]="external_data" class="info"></app-media>
     </div>
 
     <div *ngIf="activeTab === 'videos'">
