--- a/src/app/components/movies-info/movies-info.component.html
+++ b/src/app/components/movies-info/movies-info.component.html
@@ -15,16 +15,21 @@
     </button>
 </div>
 
-<div class="spacing">
-    <div *ngIf="activeTab === 'overview'" id="overview">
+
+<div *ngIf="activeTab === 'overview'" id="overview">
+    <div class="spacing">
         <app-media [data]="movie_data" [type]="type" [externalData]="external_data" class="info"></app-media>
     </div>
+</div>
 
-    <div *ngIf="activeTab === 'videos'">
+<div *ngIf="activeTab === 'videos'">
+    <div class="spacing">
         <app-videos class="videos" [filteredVideos]="filteredVideos" [videoTypes]="videoTypes"></app-videos>
     </div>
+</div>
 
-    <div *ngIf="activeTab === 'backdrop'" id="backdrop">
+<div *ngIf="activeTab === 'backdrop'" id="backdrop">
+    <div class="spacing">
         <app-images [backdrops]="backdrops" [posters]="posters"></app-images>
     </div>
 </div>
