--- a/src/assets/css/components/_carousel.scss
+++ b/src/assets/css/components/_carousel.scss
@@ -215,3 +215,19 @@
   }
 }
 
+.card__img{
+    img,
+    span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
