--- a/src/app/components/global/videos/videos.component.html
+++ b/src/app/components/global/videos/videos.component.html
@@ -13,7 +13,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 55 55"><circle cx="27.5" cy="27.5" r="26.75" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M20.97 40.81L40.64 27.5 20.97 14.19v26.62z"></path></svg>
                 </div>
             </div>
-            <div class="vname">{{videoData?.name}}</div>
+            <div class="name">{{videoData?.name}}</div>
             <div class="type">{{videoData?.type}}</div>
         </a>
     </div>
