--- a/src/app/components/tv-info/tv-info.component.html
+++ b/src/app/components/tv-info/tv-info.component.html
@@ -29,28 +29,7 @@
     </div>
 
     <div *ngIf="activeTab === 'episodes'" id="episodes">
-
-        <div class="head">
-            <select [(ngModel)]="selectedSeason" (change)="onSeasonChange($event)">
-                <option *ngFor="let season of seasons" [value]="season.season_number">
-                    Season {{ season.season_number }}
-                </option>
-            </select>
-            <strong class="count">{{ episodes_data.length }} Episodes</strong>
-        </div>
-    
-        <div class="items">
-            <div class="item" *ngFor="let episode of episodes_data" style="display: block;">
-                <div class="image lazyloaded" style="height: auto;">
-                    <img alt="{{episode?.name}}" class="lazyload" [src]="'https://image.tmdb.org/t/p/w533_and_h300_bestv2/' + episode?.still_path">
-                </div>
-                <div>
-                    <h2 class="ename"><strong>{{episode.episode_number}}</strong> {{episode.name}}</h2>
-                    <div class="overview">{{episode.overview}}</div>
-                    <div class="aired">{{episode.air_date}}</div>
-                </div>
-            </div>
-        </div>
+        <app-episodes></app-episodes>
     </div>
 
 
