--- a/src/assets/css/components/_hero.scss
+++ b/src/assets/css/components/_hero.scss
@@ -18,7 +18,6 @@
       height: 0;
       padding-bottom: 40%;
     }
-  }
   
   .hero-slide {
     position: absolute;
@@ -152,7 +151,7 @@
     width: 8.5rem;
     height: 1.4rem;
     margin-right: 1rem;
-    background-image: url('../../images/stars.png');
+    background-image: url('../../../assets/images/stars.png');
     background-repeat: no-repeat;
     background-size: auto 100%;
   
@@ -163,7 +162,7 @@
   
     > div {
       height: 100%;
-      background-image: url('../../images/stars-filled.png');
+      background-image: url('../../../assets/images/stars-filled.png');
       background-repeat: no-repeat;
       background-size: auto 100%;
     }
@@ -207,3 +206,4 @@
     }
   }
   
+}
