--- a/src/app/components/global/search/search.component.html
+++ b/src/app/components/global/search/search.component.html
@@ -1,18 +1,36 @@
-<div class="form">
-    <form autocomplete="off" (ngSubmit)="onSubmit($event)">
-        <label class="visuallyhidden" for="search">Search</label>
-
-        <div class="field">
-            <input id="search" #input [(ngModel)]="query" name="search" type="text"
-                placeholder="Search for a movie, tv show or person..." (keyup)="goToRoute()" (blur)="unFocus($event)">
-
-            <button *ngIf="showButton$ | async" type="button" aria-label="Close" (click)="goBack()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
-                    <g fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5">
-                        <path d="M.75.75l13.5 13.5M14.25.75L.75 14.25" />
-                    </g>
+<div *ngIf="searchResults.length > 0; else noResults">
+    <div class="marginList">
+      <div class="listing__head">
+        <h2 class="listing__title">Search Results for "{{ query }}"</h2>
+      </div>
+      <div class="listing__items">
+        <div *ngFor="let result of searchResults" class="card">
+          <a [routerLink]="result.link" class="card__link">
+            <div class="card__img lazyloaded">
+              <img *ngIf="result.imgSrc" [src]="result.imgSrc">
+              <span *ngIf="!result.imgSrc">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"
+                  fill-rule="evenodd" clip-rule="evenodd" fill="#999">
+                  <path
+                    d="M24 22h-24v-20h24v20zm-1-19h-22v18h22v-18zm-1 16h-19l4-7.492 3 3.048 5.013-7.556 6.987 12zm-11.848-2.865l-2.91-2.956-2.574 4.821h15.593l-5.303-9.108-4.806 7.243zm-4.652-11.135c1.38 0 2.5 1.12 2.5 2.5s-1.12 2.5-2.5 2.5-2.5-1.12-2.5-2.5 1.12-2.5 2.5-2.5zm0 1c.828 0 1.5.672 1.5 1.5s-.672 1.5-1.5 1.5-1.5-.672-1.5-1.5.672-1.5 1.5-1.5z">
+                  </path>
                 </svg>
-            </button>
+              </span>
+            </div>
+            <h2 class="card__name">{{ result.title }}</h2>
+            <div class="card__rating">
+              <div class="card__stars">
+                <div [style.width.%]="result.rating"></div>
+              </div>
+              <div class="card__vote">{{ result.vote }}</div>
+            </div>
+          </a>
         </div>
-    </form>
-</div>
+      </div>
+    </div>
+  </div>
+  
+  <ng-template #noResults>
+    <p>No results found for "{{ query }}".</p>
+  </ng-template>
+  
