--- a/src/app/components/movies-info/movies-info.component.html
+++ b/src/app/components/movies-info/movies-info.component.html
@@ -35,8 +35,8 @@
 </div>
 
 
-<app-carousel [title]="'Cast'" [exploreLink]="'/person'" [items]="cast_data" [isCastCarousel]="true"
+<app-carousel [title]="'Cast'" [exploreLink]="'/person'" [items]="cast_data" [isExplore]="false" [isCastCarousel]="true"
     [isDefaultCarousel]="false"></app-carousel>
 
-<app-carousel [title]="'More Like This'" [exploreLink]="'/movie'" [items]="recom_data" [canNavigateLeft]="true"
+<app-carousel [title]="'More Like This'" [exploreLink]="'/movie'" [isExplore]="true" [items]="recom_data" [canNavigateLeft]="true"
     [canNavigateRight]="true"></app-carousel>
