--- a/src/app/components/global/hero/hero.component.html
+++ b/src/app/components/global/hero/hero.component.html
@@ -28,6 +28,17 @@
             <div class="desc">
                 {{ data?.overview | truncate }}
             </div>
+            <button *ngIf="data.videoId" type="button" class="button button--icon trailer" (click)="openTrailer()">
+                <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="#fff">
+                        <path d="M3 22v-20l18 10-18 10z"></path>
+                    </svg>
+                </span>
+                <span class="txt">Watch Trailer</span>
+            </button>
         </div>
     </div>
 </div>
+
+
+<app-modal></app-modal>
