--- a/src/app/components/movies-info/movies-info.component.html
+++ b/src/app/components/movies-info/movies-info.component.html
@@ -24,7 +24,7 @@
 
 <div *ngIf="activeTab === 'videos'">
     <div class="spacing">
-        <app-videos class="videos" [filteredVideos]="filteredVideos" [videoTypes]="videoTypes"></app-videos>
+        <app-videos class="videos" [videosData]="videos" [videoTypes]="videoTypes"></app-videos>
     </div>
 </div>
 
